--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     ext {
-        compose_version = '1.3.3'
+        compose_version = '1.4.0-beta01'
         roomVersion = '2.5.0'
-        archLifecycleVersion = '2.6.0-alpha03'
+        archLifecycleVersion = '2.6.0-beta01'
         nav_version = "2.5.3"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
